lagt till grunderna för menyn

--- a/css/basic.css
+++ b/css/basic.css
@@ -16,7 +16,7 @@
     left: 20px;
     top: 9px;
     right: 20px;
-    bottom: 20px ;
+    bottom: 20px;
     text-align: right;
     width: 600px;
     border: 1px solid #ccc8b8;
@@ -27,5 +27,17 @@
     background-position: 0% 100%;
 }
 
-
+#menu{
+    width: 600px;
+    height: 35px;
+    background-color: #4f463c;
+    border-left: 1px solid #ccc8b8;
+    border-right: 1px solid #ccc8b8;
+    position: relative;
+    left: 20px;
+    right: 20px;
+    top: 8px;
+    text-indent: 10px;
+    font-size: 0.7em;
+}
 
