--- a/css/basic.css
+++ b/css/basic.css
@@ -41,3 +41,21 @@
     font-size: 0.7em;
 }
 
+#menu > a{
+    display: none
+}
+
+#menu > ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#menu > ul > li{
+    float: left;
+    position: relative;
+    left: 20px;
+    top: 4px;
+    background-color: #786f66;
+    margin-right: 1px;
+}
