--- a/css/basic.css
+++ b/css/basic.css
@@ -59,3 +59,25 @@
     background-color: #786f66;
     margin-right: 1px;
 }
+
+#menu > ul > li{
+    float: left;
+    position: relative;
+    left: 20px;
+    top: 4px;
+    background-color: #786f66;
+    margin-right: 1px;
+}
+
+#menu > ul > li > a:link{
+    display: block;
+    text-decoration: none;
+    font-family: verdana, sans-serif;
+    font-size: 1.1em;
+    color: white;
+    text-align: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 20px;
+    padding-left: 10px;
+}
