--- a/css/basic.css
+++ b/css/basic.css
@@ -81,3 +81,11 @@
     padding-right: 20px;
     padding-left: 10px;
 }
+
+#menu > ul > li::first-letter {
+    text-transform: uppercase;
+
+}
+#menu > ul > li:nth-child(5) > a{
+    text-transform: capitalize;
+}
