--- a/css/basic.css
+++ b/css/basic.css
@@ -117,7 +117,6 @@
 #maincontent img{
     float: left;
     border-right: 5px solid #e8e5d1;
-
 }
 
 #maincontent p{
@@ -135,3 +134,10 @@
     background-color: #e8e5d1;
     padding-left: 10px;
 }
+#maincontent h1{
+    font-family: times, serif;
+    color: #786f66;
+    font-size: 30px;
+    font-weight: lighter;
+}
+
