börjat med subcontent

--- a/css/basic.css
+++ b/css/basic.css
@@ -141,3 +141,24 @@
     font-weight: lighter;
 }
 
+#subcontent{
+    font-family: verdana, sans-serif;
+    font-size: 0.6em;
+    line-height: 160%;
+    color: #786f66;
+    background-color: #e8e5d1;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 15px;
+    float: left;
+}
+
+#subcontent p{
+    width: 210px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+    line-height: 215%;
+    font-size: 1.03em;
+
+}
+
