--- a/css/basic.css
+++ b/css/basic.css
@@ -209,4 +209,21 @@
     font-size: 1.3em;
 }
 
+#bottomcontent{
+    font-family: verdana, sans-serif;
+    font-size: 0.6em;
+    color: #786f66;
+    text-indent: 10px;
+    position: relative;
+    bottom: 10px;
+    right: 1px;
+    border: 1px solid #ccc8b8;
+    border-top: none;
+    background-color: #e8e5d1;
+    height: 25px;
+    width: 600px;
+    float: left;
+}
+
+
 
